Combine find route into base route for users, make column options lowercase
